Fix vue compile warnings, updated styles of footer (removed spacing), rendering tracking codes even with customFooter set, hide tracking htmls by css

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -20,7 +20,7 @@
 /* Set the fixed height of the footer here */
 #push,
 footer {
-    height: $footer-height-desktop;
+    min-height: $footer-height-desktop;
 }
 footer {
 	background-color: #f5f5f5;
