--- a/landing-page/src/assets/styles/layout/_footer.scss
+++ b/landing-page/src/assets/styles/layout/_footer.scss
@@ -8,6 +8,7 @@
     @extend .type-sm;
     background-color: $gray;
     padding: 20px;
+    margin: 3rem 0 0 0;
 
     p {
         margin-top: 0;
