--- a/landing-page/src/assets/styles/main.scss
+++ b/landing-page/src/assets/styles/main.scss
@@ -54,7 +54,6 @@ body {
 
 body {
   line-height:1.5em;
-  padding:1em;
 }
 
 a{ color: #0645ad; text-decoration:none;}
